Prevent city label from wrapping

--- a/assets/stylesheets/index.styl
+++ b/assets/stylesheets/index.styl
@@ -77,6 +77,7 @@ for hour in 0 1 2 3 4 5 6 7 22 23
   margin: 0.5em auto
   min-width: 80px
   text-align: left
+  white-space: nowrap;
   
   p
     margin: 0.3em 0
